# c-pinn

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DAILY_REPORT.md  README.md  c-pinn.code-workspace  libtorch  test_shell.sh
benchmark/: PERFORMANCE_ANALYSIS.md  analyze_breakdown.py  bench_cpp_detailed.sh  bench_torch_detailed.py  pinn_allen_cahn_torch.py  pinn_kdv_torch.py  pinn_sine_gordon_torch.py  profile_torch_breakdown.py  summarize_torch.py  torch_breakdown_results.json  verify_final.py
benchmark/autodiff/: test_matrix_graph.py  test_minimal_training.py  test_nested_graph.py
config/: advection_config.json  burgers_config.json  pinn_config.json
docs/: pure_c_vs_torch.md  requirements.md
docs/autodiff/: nested_graph_tech_report.md
docs/compute_flows/: README.md  autodiff_matrix_flow.md  pure_cpp_pinn_flow.md
examples/: CMakeLists.txt  advection.cpp  burgers.cpp  poisson.cpp  pure_c_allen_cahn.cpp  pure_c_inference.cpp  pure_c_kdv.cpp  pure_c_sine_gordon.cpp
examples/autodiff/: matrix_graph.cpp  nested_graph.cpp
include/pinn/: types.hpp
include/pinn/core/: rng.hpp  tensor.hpp
include/pinn/geometry/: difference.hpp  geometry.hpp  interval.hpp  rectangle.hpp  sampling.hpp
include/pinn/loss/: loss_terms.hpp
include/pinn/model/: model.hpp  trainer.hpp
include/pinn/nn/: activation.hpp  adam.hpp  flatten.hpp  fnn.hpp  gemm.hpp  initialization.hpp  lbfgs.hpp  optimizer.hpp  relu.hpp  sin.hpp  tanh.hpp
include/pinn/pde/: boundary_condition.hpp  parser.hpp  pde.hpp
include/pinn/utils/: callback.hpp  checkpoint.hpp  checkpoint_c.hpp  config.hpp  logger.hpp  stencil.hpp  visualization_callback.hpp
scripts/: configure.py  plot_csv.py
src/core/: tensor.cpp
src/geometry/: difference.cpp  interval.cpp  rectangle.cpp  sampling.cpp
src/loss/: loss_terms.cpp
src/model/: model.cpp  trainer.cpp
src/nn/: activation.cpp  adam.cpp  flatten.cpp  fnn.cpp  fnn_pure.cpp  gemm.cpp  initialization.cpp  lbfgs.cpp  optimizer.cpp  relu.cpp  sin.cpp  tanh.cpp
src/pde/: bc.cpp  parser.cpp  pde.cpp
src/utils/: callbacks.cpp  checkpoint.cpp  checkpoint_c.cpp  config.cpp  logger.cpp  visualization_callback.cpp
tests/: CMakeLists.txt  placeholder.cpp  tensor_test.cpp
